--- a/assets/style.css
+++ b/assets/style.css
@@ -105,7 +105,7 @@ header nav ul li a:hover {
 }
 
 .about-section {
-    padding: 60px 20px;
+    padding: 40px 20px;
     background-color: #fdf2ecc4;
     border-radius: 10px;
     margin: 200px 0;
@@ -137,4 +137,110 @@ header nav ul li a:hover {
     line-height: 1.6;
     color: #140c06;
     text-align: justify;
+}
+
+.drinks-section {
+    padding: 60px 20px;
+    text-align: center;
+    border-radius: 10px;
+    margin: 50px 0;
+}
+
+.drinks-section h2 {
+    font-size: 36px;
+    color: #140c06;
+    margin-top: -100px;
+    margin-bottom: 150px;
+}
+
+.drink-circles {
+    display: flex;
+    justify-content: center;
+    gap: 150px;
+    flex-wrap: wrap;
+}
+
+.drink-item {
+    position: relative;
+    width: 300px;
+    height: 300px;
+    border-radius: 50%;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    overflow: visible;
+    transform-style: preserve-3d;
+    transition: transform 0.6s ease, box-shadow 0.3s ease;
+}
+
+.drink-front,
+.drink-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    backface-visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+
+.drink-front {
+    background-color: #dcb593;
+}
+
+.drink-back {
+    background-color: #de9a5f;
+    transform: rotateY(180deg);
+    color: #fff;
+    font-size: 25px;
+}
+
+.drink-item:hover {
+    transform: scale(1.1) rotateY(180deg);
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2);
+}
+
+.drink-item img {
+    position: absolute;
+    width: 400px;
+    height: auto;
+    top: -70px;
+    right: -50px;
+    pointer-events: none;
+    transition: transform 0.6s ease;
+}
+
+.drink-item h3 {
+    position: absolute;
+    bottom: 45px;
+    width: 100%;
+    font-size: 20px;
+    color: #140c06;
+    margin: 0;
+    text-align: center;
+}
+
+.drink-back p {
+    font-size: 16px;
+    text-align: center;
+    padding: 0 15px;
+}
+
+.drink-item:hover img {
+    transform: scale(1.2) rotate(-15deg);
+}
+
+.drink-item .custom-drink {
+    left: -70px;
+    top: -110px;
+}
+
+.drink-item .fruit-drink{
+    left: -20px;
+    top: -110px;
+}
+
+.drink-item .tapioca-drink{
+    left: -30px;
+    top: -140px;
 }
